# objectrecords

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.slim  LICENSE-APACHE  README.md
crates/objectrecords-api/: Cargo.toml
crates/objectrecords-api/src/: auth.rs  error.rs  lib.rs  main.rs  storage.rs
crates/objectrecords-api/src/routes/: assets.rs  health.rs  mod.rs  records.rs
crates/objectrecords-api/tests/: auth_smoke.rs  http_smoke.rs
crates/objectrecords-core/: Cargo.toml
crates/objectrecords-core/src/: lib.rs
crates/objectrecords-core/tests/: compile_fail.rs
crates/objectrecords-core/tests/compile_fail/: external_state_impl_forbidden.rs  external_state_impl_forbidden.stderr  fixed_has_no_update.rs  fixed_has_no_update.stderr  snapshot_has_no_update.rs  snapshot_has_no_update.stderr
crates/objectrecords-db/: Cargo.toml
crates/objectrecords-db/src/: client.rs  convert.rs  error.rs  lib.rs  persisted.rs  repository.rs  schema.rs
crates/objectrecords-db/tests/: persistence_round_trip.rs  surrealdb_local.rs
crates/objectrecords-storage/: Cargo.toml
crates/objectrecords-storage/src/: lib.rs  s3_compat.rs
crates/objectrecords-storage/tests/: s3_compat_seaweedfs.rs
