[package]
name = "objectrecords-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Type-level skeleton for Object Records: Kind, State, Record<S>, Body."
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
uuid = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
