[package]
name = "objectrecords-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "BlobStorage trait + backends for Object Records (Phase 2)."
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
http = { workspace = true }
object_store = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
